--- a/index.html
+++ b/index.html
@@ -5,18 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coastel baking</title>
     <link rel="stylesheet" href="Style.css">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
     <header>
         <div class="left-header-group">
-            <img src="" alt="">
+            <img src="Images/logo.jpg" alt="">
             <p class="header-heading">Coastel baking Supplies<p>
         </div>
-        <nav class="nav-bar">
-            <a href="#">About</a>
-            <a href="#">Home</a>
-            <a href="#">Contact</a>
+        <nav class="nav">
+            <div class="navbar">
+                <a href="#">About</a>
+                <a href="#">Home</a>
+                <a href="#">Contact</a>
+            </div>
+            <ion-icon name="menu" class="menu-icon"></ion-icon>
         </nav>
     </header>
+
+    <section id="ONE">
+        <img src="" alt="">
+        <h3></h3>
+        <p></p>
+        <button></button>
+    </section>
 </body>
 </html>
